--- a/index.html
+++ b/index.html
@@ -209,15 +209,21 @@
       </p>
       <button class="button" type="submit">Войти</button>
     </form>
-    <button class="modal-close" type="button">Закрыть</button>
+    <button class="login-close modal-close" type="button">Закрыть</button>
   </section>
 
-  <section class="modal">
-    <h2>Как до нас добраться</h2>
-    <!-- Здесь будет карта -->
-    <button type="button">Закрыть</button>
+  <section class="modal modal-map">
+    <h2 class="visually-hidden">Как до нас добраться</h2>
+    <!-- <img src="img/map.png" width="766" height="560"
+      alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"> -->
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
+      width="766" height="560" allowfullscreen
+      title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
+    <button class="map-close modal-close" type="button">Закрыть</button>
   </section>
 
+  <script src="login.js"></script>
 </body>
 
 </html>
